; ModuleID = '/home/carl/AnghaBench/vlc/src/win32/extr_filesystem.c_widen_path.c'
source_filename = "/home/carl/AnghaBench/vlc/src/win32/extr_filesystem.c_widen_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@ENOENT = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @widen_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @widen_path(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* @errno, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = call i32* @ToWide(i8* %5)
  store i32* %6, i32** %4, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load i64, i64* @errno, align 8
  %11 = icmp eq i64 %10, 0
  br i1 %11, label %12, label %14

12:                                               ; preds = %9
  %13 = load i64, i64* @ENOENT, align 8
  store i64 %13, i64* @errno, align 8
  br label %14

14:                                               ; preds = %12, %9
  store i32* null, i32** %2, align 8
  br label %17

15:                                               ; preds = %1
  %16 = load i32*, i32** %4, align 8
  store i32* %16, i32** %2, align 8
  br label %17

17:                                               ; preds = %15, %14
  %18 = load i32*, i32** %2, align 8
  ret i32* %18
}

declare dso_local i32* @ToWide(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
